# application-services

./: .buildconfig-android.yml  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md
book/: 404.html  adding-docs.html  android-faqs.html  build-and-publish-pipeline.html  building.html  contributing.html  dependency-management.html  index.html  logging.html  naming-conventions.html  print.html  searcher-c2a407aa.js  searchindex-0d766d71.js  searchindex-831d2664.js  searchindex.js  searchindex.json
book/adr/: 0000-use-markdown-architectural-decision-records.html  0001-update-logins-api.html  0002-database-corruption.html  0003-swift-packaging.html  0004-early-startup-experiments.html  0005-remote-settings-client.html  0007-limit-visits-migration-to-10000.html  index.html
book/design/: components-strategy.html  db-pragmas.html  index.html  megazords.html  metrics.html  rust-versions.html  swift-package-manager.html  sync-manager.html  sync-overview.html  test-faster.html
book/howtos/: adding-a-new-component.html  branch-builds.html  breaking-changes.html  building-a-rust-component.html  debug-sql.html  locally-building-jna.html  locally-published-components-in-fenix.html  locally-published-components-in-firefox-ios.html  locally-published-components-in-focus-ios.html  releases.html  smoke-testing-app-services.html  testing-a-rust-component.html  uniffi-object-destruction-on-kotlin.html  upgrading-nss-guide.html  vendoring-into-mozilla-central.html
book/rust-docs/: crates.js  search-index.js  src-files.js
components/ads-client/: Cargo.toml
components/as-ohttp-client/: Cargo.toml
components/autofill/: Cargo.toml
components/context_id/: Cargo.toml
components/crashtest/: Cargo.toml
components/example/: Cargo.toml
components/filter_adult/: Cargo.toml
components/fxa-client/: Cargo.toml
components/init_rust_components/: Cargo.toml
components/logins/: Cargo.toml
components/merino/: Cargo.toml
components/nimbus/: Cargo.toml
components/places/: Cargo.toml
components/push/: Cargo.toml
components/relay/: Cargo.toml
components/relevancy/: Cargo.toml
components/remote_settings/: Cargo.toml
components/search/: Cargo.toml
components/suggest/: Cargo.toml
components/support/error/: Cargo.toml
components/support/error/src/: macros.rs
components/support/rust-log-forwarder/: Cargo.toml
components/support/rust-log-forwarder/src/: lib.rs
components/support/tracing/: Cargo.toml  build.rs
components/support/tracing/src/: layer.rs  lib.rs  testing.rs  tracing-support.udl
components/sync15/: Cargo.toml
components/sync_manager/: Cargo.toml
components/tabs/: Cargo.toml
components/viaduct/: Cargo.toml
components/viaduct/android/: build.gradle
components/webext-storage/: Cargo.toml  build.rs
docs/adr/: 0008-sync-payload-evolution.md  0008-use-tracing.md
gradle/: libs.versions.toml
kotlin/: navigation.html
kotlin/kotlin-components-docs/: package-list
kotlin/scripts/: pages.json
megazords/full/: Cargo.toml
megazords/ios-rust/: DEPENDENCIES.md
swift/: Classes.html  Enums.html  Extensions.html  Functions.html  Protocols.html  Structs.html  Typealiases.html  index.html  search.json
swift/Classes/: BackendImpl.html  ContextIdComponent.html  CuratedRecommendationsClient.html  EncryptorDecryptorImpl.html  FirefoxAccount.html  FxaStateMachineChecker.html  KeyManagerImpl.html  LoginStore.html  ManagedEncryptorDecryptor.html  MetricsHandlerImpl.html  MozAdsClient.html  MozAdsClientBuilder.html  MozAdsContextIdProviderImpl.html  MozAdsTelemetryImpl.html  NimbusClient.html  NimbusStringHelper.html  NimbusTargetingHelper.html  OhttpSession.html  OhttpTestServer.html  PlacesApi.html  PlacesConnection.html  PushManager.html  RecordedContextImpl.html  RelayClient.html  RelayRemoteSettingsClient.html  RemoteCommandStore.html  RemoteSettings.html  RemoteSettingsClient.html  RemoteSettingsService.html  RemoteSettingsTelemetryImpl.html  SearchEngineSelector.html  SqlInterruptHandle.html  StaticKeyManager.html  Store.html  SuggestClient.html  SuggestStore.html  SuggestStoreBuilder.html  SyncManager.html  TabsBridgedEngine.html  TabsStore.html
swift/Enums/: AccountEvent.html  AmpMatchingStrategy.html  ApiError.html  AutofillApiError.html  BookmarkItem.html  BookmarkPosition.html  BridgeType.html  BulkResultEntry.html  CloseTabsResult.html  ConnectionType.html  CrashTestError.html  CuratedRecommendationLocale.html  CuratedRecommendationsApiError.html  DeviceCapability.html  DeviceType.html  DocumentType.html  EnrollmentChangeEventType.html  FrecencyThresholdOption.html  FxaError.html  FxaEvent.html  FxaRustAuthState.html  FxaServer.html  FxaState.html  FxaStateCheckerEvent.html  FxaStateCheckerState.html  GeonameMatchType.html  GeonameType.html  HistoryMetadataPageMissingBehavior.html  IncomingDeviceCommand.html  InsertableBookmarkItem.html  InterruptKind.html  JsonEngineMethod.html  Level.html  LoginOrErrorMessage.html  LoginsApiError.html  MerinoSuggestApiError.html  Method.html  MozAdsCacheMode.html  MozAdsClientApiError.html  MozAdsEnvironment.html  (+33 more)
swift/Protocols/: AppServicesLogger.html  ApplicationErrorReporter.html  Backend.html  ContextIdCallback.html  ContextIdComponentProtocol.html  CuratedRecommendationsClientProtocol.html  EncryptorDecryptor.html  EventSink.html  FirefoxAccountProtocol.html  FxaStateMachineCheckerProtocol.html  GeckoPrefHandler.html  KeyManager.html  LoginStoreProtocol.html  MetricsHandler.html  MozAdsClientBuilderProtocol.html  MozAdsClientProtocol.html  MozAdsContextIdProvider.html  MozAdsTelemetry.html  NimbusClientProtocol.html  NimbusStringHelperProtocol.html  NimbusTargetingHelperProtocol.html  OhttpSessionProtocol.html  OhttpTestServerProtocol.html  PlacesApiProtocol.html  PlacesConnectionProtocol.html  PushManagerProtocol.html  RecordedContext.html  RelayClientProtocol.html  RelayRemoteSettingsClientProtocol.html  RemoteCommandStoreProtocol.html  RemoteSettingsClientProtocol.html  RemoteSettingsProtocol.html  StoreProtocol.html  (+10 more)
tools/: import-app-services-to-central.sh
tools/embedded-uniffi-bindgen/: Cargo.toml
(+2832 files in other folders)
