[package]
name = "crashtest"
edition = "2021"
version = "0.1.0"
authors = ["Ryan Kelly <rfkelly@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
log = "0.4"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16", features=["build"]}
