[package]
name = "init_rust_components"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Schmidt <joschmidt@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android"]

[features]
default = []
keydb = ["nss/keydb"]
ohttp = ["dep:viaduct", "viaduct/ohttp"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }
nss = { path = "../support/rc_crypto/nss" }
viaduct = { path = "../viaduct", optional = true }
