[package]
name = "merino"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
viaduct = { path = "../viaduct" }
error-support = { path = "../support/error" }
thiserror = "2"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16", features = ["build"] }
