[package]
name = "viaduct"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[lib]
crate-type = ["lib"]

[dependencies]
async-trait = "0.1"
error-support = { path = "../support/error" }
url = "2"
serde = "1"
serde_json = "1"
once_cell = "1.5"
parking_lot = { version = ">=0.11,<=0.12" }
pollster = "0.3.0"
prost = "0.13"
ffi-support = "0.4"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }
bhttp = { version = "0.7.1", optional = true }
ohttp = { version = "0.7.1", features = ["client", "server", "app-svc", "external-sqlite"], default-features = false, optional = true }

[features]
default = []
ohttp = ["dep:bhttp", "dep:ohttp"]
