[package]
name = "error-support"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
autotests = false
exclude = ["/android"]

[dependencies]
backtrace = { version = "0.3", optional = true}
error-support-macros = { path = "macros" }
env_logger = { version = "0.10", default-features = false }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
parking_lot = { version = ">=0.11,<=0.12" }
tracing = { version = "0.1", optional = true }
tracing-support = { path = "../tracing", optional = true }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16", features=["build"]}

[features]
backtrace = ["dep:backtrace"]
tracing-logging = ["dep:tracing", "dep:tracing-support"]
tracing-reporting = ["dep:tracing", "dep:tracing-support"]
testing = []
