[package]
name = "rust-log-forwarder"
version = "0.1.0"
edition = "2021"
authors = ["Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }
error-support = { path = "../error", default-features = false, features = ["tracing-logging"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
tracing-support = { path = "../tracing" }

[dev-dependencies]
tracing = "0.1"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16", features=["build"]}
