[package]
name = "tracing-support"
version = "0.1.0"
edition = "2021"

[features]
testing = [ "tracing-subscriber/env-filter" ]

[dependencies]
once_cell = "1"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1"
# Note: tracing-subscriber has all default deps *except* tracing-log.
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "fmt", "ansi", "std"] }
uniffi = { version = "0.28.2" }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

#[dev-dependencies]
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }

