[package]
name = "tracing-support"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[features]
testing = [ "tracing-subscriber/env-filter" ]

[dependencies]
once_cell = "1"
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
uniffi = { version = "0.28.2" }

[dev-dependencies]
# we might want the "tracing-log" feature?
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

