[package]
name = "tracing-support"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
parking_lot = "0.12"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5897c6f07068182dc09869fc1810264d17516f16", features = ["build"] }
